5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4159/executions/1863_1286.log
== TEST (2019-07-02 10:14:59) 
-- CODE:
from numpy import*
from numpy.linealg import*
v = array(eval(input("x y z: ")))
v = v.t
a = array([10,20,30],[50,40,10],[30,10,40])
r = dot(inv a,v .T)
-- ERROR:
File "XXXX", line 6
    r = dot(inv a,v .T)
                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 10:15:20) 
-- CODE:
from numpy import*
from numpy.linealg import*
v = array(eval(input("x y z: ")))
v = v.t
a = array([10,20,30],[50,40,10],[30,10,40])
r = dot(inv(a,v).T)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 10:15:46) 
-- CODE:
from numpy import*
from numpy.linalg import*
v = array(eval(input("x y z: ")))
v = v.t
a = array([10,20,30],[50,40,10],[30,10,40])
r = dot(inv(a,v).T)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 10:16:10) 
-- CODE:
from numpy import*
from numpy.linalg import*
v = array(eval(input("x y z: ")))
v = v.t
a = array([10,20,30],[50,40,10],[30,10,40])
r = dot(inv(a,v).T)
print(r)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 10:16:46) 
-- CODE:
from numpy import*
from numpy.linalg import*
v = array(eval(input("x y z: ")))
v = v.T
a = array([10,20,30],[50,40,10],[30,10,40])
r = dot(inv(a,v).T)
print(r)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 10:17:36) 
-- CODE:
from numpy import*
from numpy.linalg import*
v = array(eval(input("x y z: ")))
v = v.T
a = array([10,20,30],[50,40,10],[30,10,40])
r = dot(inv(v,a).T)
print(r)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 10:19:10) 
-- CODE:
from numpy import*
from numpy.linalg import*
v = array(eval(input("x y z: ")))
v = v.T
a = array([10,20,30],[50,40,10],[30,10,40])
r = dot(inv(v),a.T)
print(r)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 10:19:48) 
-- CODE:
from numpy import*
from numpy.linalg import*
v = array(eval(input("x y z: ")))
v = v.T
a = array([[10,20,30],[50,40,10],[30,10,40]])
r = dot(inv(v),a.T)
print(r)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 10:20:43) 
-- CODE:
from numpy import*
from numpy.linalg import*
v = array(eval(input("x y z: ")))
v = v.T
a = array([[10,20,30],[50,40,10],[30,10,40]])
r = dot(inv(a),v.T)
print(r)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 10:22:12) 
-- CODE:
from numpy import*
from numpy.linalg import*
v = array(eval(input("x y z: ")))
v = v.T
a = array([[10,20,30],[50,40,10],[30,10,40]])
r = dot(inv(a),v.T)
print("abacate: ",round(r[0]), 0)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 10:22:30) 
-- CODE:
from numpy import*
from numpy.linalg import*
v = array(eval(input("x y z: ")))
v = v.T
a = array([[10,20,30],[50,40,10],[30,10,40]])
r = dot(inv(a),v.T)
print("abacate: ",round(r[0]),)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 10:22:40) 
-- CODE:
from numpy import*
from numpy.linalg import*
v = array(eval(input("x y z: ")))
v = v.T
a = array([[10,20,30],[50,40,10],[30,10,40]])
r = dot(inv(a),v.T)
print("abacate:",round(r[0]),)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 10:24:22) 
-- CODE:
from numpy import*
from numpy.linalg import*
v = array(eval(input("x y z: ")))
v = v.T
a = array([[10,20,30],[50,40,10],[30,10,40]])
r = dot(inv(a),v.T)
print("abacate:",round(r[0]),)
print("manga:",round(r[1]),)
print("pera:",round(r[2]),)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 10:29:13) 
-- CODE:
from numpy import*
from numpy.linalg import*
v = array(eval(input("x y z: ")))
v = v.T
a = array([[10,20,30],[50,40,10],[30,10,40]])
r = dot(inv(a),v.T)
print("abacate:",round(r[0]),)
print("manga:",round(r[1]),)
print("pera:",round(r[2]),)
if(r[0]<r[1] and r[0]<r[2]):
	print("abacate")
elif(r[1]<r[2] and r[1]<r[0]):
	print("manga")
else:
	print("pera")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 10:29:30) 
-- CODE:
from numpy import*
from numpy.linalg import*
v = array(eval(input("x y z: ")))
v = v.T
a = array([[10,20,30],[50,40,10],[30,10,40]])
r = dot(inv(a),v.T)
print("abacate:",round(r[0]),)
print("manga:",round(r[1]),)
print("pera:",round(r[2]),)
if(r[0]<r[1] and r[0]<r[2]):
	print("abacate")
elif(r[1]<r[2] and r[1]<r[0]):
	print("manga")
else:
	print("pera")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 10:29:50) 
-- CODE:
from numpy import*
from numpy.linalg import*
v = array(eval(input("x y z: ")))
v = v.T
a = array([[10,20,30],[50,40,10],[30,10,40]])
r = dot(inv(a),v.T)
print("abacate:",round(r[0]),)
print("manga:",round(r[1]),)
print("pera:",round(r[2]),)
if(r[0]<r[1] and r[0]<r[2]):
	print("abacate")
elif(r[1]<r[2] and r[1]<r[0]):
	print("manga")
else:
	print("pera")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-02 10:29:59) 
-- CODE:
from numpy import*
from numpy.linalg import*
v = array(eval(input("x y z: ")))
v = v.T
a = array([[10,20,30],[50,40,10],[30,10,40]])
r = dot(inv(a),v.T)
print("abacate:",round(r[0]),)
print("manga:",round(r[1]),)
print("pera:",round(r[2]),)
if(r[0]<r[1] and r[0]<r[2]):
	print("abacate")
elif(r[1]<r[2] and r[1]<r[0]):
	print("manga")
else:
	print("pera")
-- EXECUTION TIME:
0.901145
-- TEST CASE 1:
---- input:
[2375,3375,3875]
---- correct output:
abacate: 50.0
manga: 8.0
pera: 58.0
manga
---- user output:
abacate: 50.0
manga: 8.0
pera: 58.0
manga
-- TEST CASE 2:
---- input:
[755,1415,765]
---- correct output:
abacate: 8.0
manga: 23.0
pera: 7.0
pera
---- user output:
abacate: 8.0
manga: 23.0
pera: 7.0
pera
-- TEST CASE 3:
---- input:
[3055,2995,3865]
---- correct output:
abacate: 19.0
manga: 32.0
pera: 74.0
abacate
---- user output:
abacate: 19.0
manga: 32.0
pera: 74.0
abacate
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
